<resources>
    <string name="app_name">WeatherApp</string>
    <string name="label_tomorrow">Tommorow</string>
    <string name="menu_russian_cities">Russia</string>
    <string name="menu_european_cities">Europa</string>
    <string name="label_today">Today</string>
    <string name="weather_icon" translatable="false">weather icon</string>
    <string name="city_label">City</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="TWIConditionTitle" translatable="false">Condition</string>

    <string name="label_time">Time</string>
    <string name="humidity_title">Humidity:</string>
    <string name="city_wind_speed">Wind Speed</string>
    <string name="TWIWindSpeedTitle">Wind Speed</string>
    <string name="twi_wind_dir_title">Direction</string>
    <string name="city_wind_direction">Direction</string>
    <string name="wi_pressure_title">Pressure</string>
</resources>
