<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewTWICondition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/TWIConditionTitle"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewTWIIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageViewTWIIcon"
            app:layout_constraintTop_toBottomOf="@+id/imageViewTWIIcon" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.18" />

        <TextView
            android:id="@+id/textViewTWITemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="28sp"
            app:layout_constraintEnd_toStartOf="@+id/imageViewTWIIcon"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewTWIIcon"
            android:layout_width="120dp"
            android:layout_height="80dp"

            android:contentDescription="@string/weather_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textViewTWIName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_today"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTWIWindSpeedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/TWIWindSpeedTitle"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textViewTWITemp" />

        <TextView
            android:id="@+id/textViewTWIWindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textViewTWIWindSpeedTitle" />

        <TextView
            android:id="@+id/textViewTWIDirTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twi_wind_dir_title"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/imageViewTWIIcon"
            app:layout_constraintTop_toBottomOf="@+id/textViewTWITemp" />

        <TextView
            android:id="@+id/textViewTWIDir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/imageViewTWIIcon"
            app:layout_constraintTop_toBottomOf="@+id/textViewTWIDirTitle" />

        <TextView
            android:id="@+id/textViewTWIDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTWIName" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>